# ssda-folio-pipeline

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Folio Processor.bat  HANDOFF.md  README.md  README_TOOL.md  Run Folio App.bat  pyproject.toml  requirements-seg.txt  requirements-tight.txt  requirements-train.txt  requirements-web.txt  requirements.txt  run_app.py  run_folio_app.command
docs/: DEPLOY.md  METRICS.md  SPARSE_FINDINGS.md  SUPERVISOR_SUMMARY.md
folio/: __init__.py  cli.py  config.py  gui.py  pipeline.py  process.py  schemas.py  webapp.py
folio_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
packaging/: README.md  app_entry.py  build_exe.py
scripts/: README.md  crop_volume_s3.py  transcribe_volumes.py
tests/: test_content.py  test_deskew_adaptive.py  test_geometry.py  test_ocr_orient_rescue.py  test_orientation_convention.py  test_pipeline_integration.py  test_prepass_and_gate.py  test_process.py  test_provenance.py  test_recover_mask.py  test_spine.py  test_spine_margin.py  test_textregion.py
tools/: _build_count_ds.py  _changed_pages.py  _clipverify.py  _edgeclip.py  _erased_ink.py  _failures.py  _holefix_diff.py  _volqa.py  _whiteout_notch.py  benchmark.py  benchmark_orientation.py  eval_crop.py  eval_faded_seg.py  eval_seg_3way.py  eval_vs_legacy.py  evaluate.py  export_for_archivault.py  fetch_weights.py  find_sparse_folios.py  folio_process.py  gt_full_verify.py  gt_interior_verify.py  legacy_model_ids.txt  review_output.py  run_hybrid_orient_demo.py  run_samples.py  segment_entries.py  setup_weights.py  (+3 more)
(+25 files in other folders)
