[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-pipeline"
version = "1.0.0"
description = "Archival book/document page splitting, orientation and cropping at scale"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
folio = "folio.cli:main"
folio-gui = "folio.gui:main"
folio-web = "folio.webapp:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["folio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
